solved the problems 12-18 from ie 10, the problems on ie 11 and the 9 and 10 on ie9

--- a/sass/components/_thankyou.scss
+++ b/sass/components/_thankyou.scss
@@ -50,6 +50,7 @@
     .title {
         font-size: 24px;
         color: $mid-gray;
+        padding-bottom: 16px;
     }
 
     h1 {
